--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "autoprefixer": "^7.1.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
@@ -46,6 +47,8 @@
     "node-sass": "^4.5.3",
     "npm-watch": "^0.2.0",
     "open-browser-webpack-plugin": "0.0.5",
+    "postcss": "^6.0.10",
+    "postcss-loader": "^2.0.6",
     "prettyjson": "^1.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
