--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@storybook/addon-actions": "^3.2.6",
     "@storybook/addon-links": "^3.2.6",
     "@storybook/react": "^3.2.8",
+    "compression-webpack-plugin": "^1.0.0",
     "webpack-bundle-analyzer": "^2.9.0"
   }
 }
