--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classwrap": "^1.0.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
+    "dotenv": "^4.0.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.9.0",
@@ -42,6 +43,7 @@
     "express-force-https": "^1.0.0",
     "express-static-gzip": "^0.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "giphy-api": "^1.2.7",
     "inherits": "^2.0.3",
     "jest": "^20.0.4",
     "lodash": "^4.17.4",
@@ -65,6 +67,7 @@
     "react-test-renderer": "^15.6.1",
     "react-tooltip": "^3.3.0",
     "sass-loader": "^6.0.6",
+    "sinon": "2.3.8",
     "socket.io": "^1.7.3",
     "socket.io-client": "^1.7.3",
     "starwars-names": "^1.6.0",
