--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "classwrap": "^1.1.0",
+    "compression-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.1.1",
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
@@ -60,6 +61,7 @@
     "react-dom": "^16.0.0",
     "react-dropdown": "^1.3.1",
     "react-feather": "^1.0.7",
+    "react-ga": "^2.3.5",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -73,7 +75,10 @@
     "starwars-names": "^1.6.0",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
+    "universal-analytics": "^0.4.16",
+    "uuid": "^3.1.0",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
   },
@@ -91,11 +96,9 @@
     "@storybook/react": "^3.2.12",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2017": "^6.24.1",
-    "compression-webpack-plugin": "^1.0.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "react-addons-test-utils": "^15.6.2",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "react-addons-test-utils": "^15.6.2"
   },
   "false": {}
 }
